--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -19,7 +19,7 @@
 
 <br>
 <div class="ui warning message">
-  <div class="header">Current Status: Beta</div>
+  <div class="header">Project Status: Beta</div>
   <ul class="list">
     <li>Entity editing only possibly by API; web interface is not implemented
     <li>Edits are manually reviewed (not automatically accepted)
