--- a/python/fatcat_web/templates/container_search.html
+++ b/python/fatcat_web/templates/container_search.html
@@ -26,7 +26,7 @@
     <h5 style="margin-top: 4px; margin-bottom: 4px; font-size: 1em;">{{ entity.publisher }}</h5>
   {% endif %}
   {% if entity.issnl %}
-    <a href="https://issn.org/{{entity.issnl }}" style="color: green;">ISSN {{ entity.issnl }}</a>
+    <a href="https://portal.issn.org/resource/ISSN/{{entity.issnl }}" style="color: green;">ISSN {{ entity.issnl }}</a>
   {% endif %}
   {% if entity.container_type %}
   &nbsp;{{ entity.container_type }}
