tweak front page byline

--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -7,7 +7,7 @@
 <img class="ui fluid bordered image" src="/static/fatcat.jpg" title="CC0 photo of an oversized feline" alt="">
 
 <br>
-<h2 class="ui header centered">Search millions of research publications and datasets</h2>
+<h2 class="ui header centered">Cataloging of millions of research publications</h2>
 <form class="" role="search" action="/release/search" method="get">
   <div class="ui form">
     <div class="ui action input huge fluid">
