--- a/python/fatcat_web/templates/file_view.html
+++ b/python/fatcat_web/templates/file_view.html
@@ -16,57 +16,22 @@
 <div class="one wide column"></div>
 <div class="ten wide column" style="font-size: 16px;">
 
-{% if file.extra %}
-<h3>Extra Metadata (raw JSON)</h3>
-<table class="ui definition single line fixed compact small unstackable table">
-<tbody>
-{% for (key, value) in file.extra.items() %}
-  <tr><td class="three wide right aligned"><code>{{ key }}</code></td>
-      <td class="seven wide"><code>{{ value }}</code>
-{% endfor %}
-</tbody>
-</table>
+{% if entity.extra %}
+  {{ entity_macros.extra_metadata(entity.extra) }}
 {% endif %}
 
 <h3>Releases</h3>
-{% if file.releases != [] %}
-<table class="ui very basic celled table">
-<tbody>
-{% for release in file.releases %}
-  <tr><td class="two wide center aligned">
-        {% if release.release_date %}{{ release.release_date }}{% elif release.release_year %}{{ release.release_year }}{% endif %}
-      <td class="five wide single line">
-        <b><a href="/release/{{ release.ident }}">{{ release.title }}</a></b>
-        <br>{{ release.release_type or "unknown" }} - {{ release.release_status or "unknown" }}
-              {% if release.license_slug %} - {{ release.license_slug }}{% endif %}
-        {% if release.doi %}
-          <br><a href="https://doi.org/{{ release.doi }}" style="color:green;">doi:{{ release.doi }}</a>
-        {% endif %}
-{% endfor %}
-</tbody>
-</table>
+{% if entity.releases != [] %}
+  {{ entity_macros.release_list(entity.releases) }}
 {% else %}
-<p>
-This file is not associated with any fatcat release.
+  <p>
+  This file is not associated with any fatcat release.
 {% endif %}
 
 
 <h3>URLs</h3>
 {% if file.urls != None %}
-<table class="ui very basic compact single line fixed table">
-<tbody>
-  {% for url in file.urls %}
-    <tr><td class="two wide right aligned">{{ url.rel }}
-        <td class="eight wide"><small><code><a href="{{ url.url }}">
-        {% if url.url.count('/') >= 3 %}
-          {{ '/'.join(url.url.split('/')[0:2]) }}/<b>{{ ''.join(url.url.split('/')[2]) }}</b>/{{ '/'.join(url.url.split('/')[3:]) }}
-        {% else %}
-          {{ url.url }}
-        {% endif %}
-        </a></code></small>
-  {% endfor %}
-</tbody>
-</table>
+  {{ entity_macros.url_list(file.urls) }}
 {% else %}
 No known public URL, mirror, or archive for this file.
 {% endif %}
