remove redundant bytes from file view

--- a/python/fatcat_web/templates/file_view.html
+++ b/python/fatcat_web/templates/file_view.html
@@ -64,7 +64,7 @@ No known public URL, mirror, or archive for this file.
 
 {% if file.size != None %}
 <div class="ui segment attached">
-  <p><b>Size</b> &nbsp;{{ file.size|filesizeformat }} (bytes)
+  <p><b>Size</b> &nbsp;{{ file.size|filesizeformat }}
 </div>
 {% endif %}
 
