--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -7,7 +7,7 @@
     Revision:
     <br><small><code>{{ entity.revision }}</code></small>
   {% endif %}
-  <br><a href="https://api.{{ config.FATCAT_DOMAIN }}/v0/release/{{ entity.ident }}{% if expand %}?expand={{ expand}}{% endif %}">As JSON object via API</a>
+  <br><a href="https://api.{{ config.FATCAT_DOMAIN }}/v0/{{ entity_type }}/{{ entity.ident }}{% if expand %}?expand={{ expand}}{% endif %}">As JSON object via API</a>
 </div>
 
 <div class="two ui buttons bottom attached">
