collapse extra metadata key column

--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -22,8 +22,8 @@
 <table class="ui definition single line fixed compact small unstackable table">
 <tbody>
 {% for (key, value) in extra.items() %}
-  <tr><td class="three wide right aligned"><code>{{ key }}</code></td>
-      <td class="seven wide"><code>{{ value }}</code>
+  <tr><td class="collapsing right aligned"><code>{{ key }}</code></td>
+      <td class=""><code>{{ value }}</code>
 {% endfor %}
 </tbody>
 </table>
