revert collapsing extra key; do use template in release view

--- a/python/fatcat_web/templates/container_view.html
+++ b/python/fatcat_web/templates/container_view.html
@@ -37,17 +37,11 @@
 </form>
 {% endif %}
 
-{% if container.extra %}
-<h3>Extra Metadata (raw JSON)</h3>
-<table class="ui definition single line fixed compact small unstackable table">
-<tbody>
-{% for (key, value) in container.extra.items() %}
-  <tr><td class="three wide right aligned"><code>{{ key }}</code></td>
-      <td class="seven wide"><code>{{ value }}</code>
-{% endfor %}
-</tbody>
-</table>
+
+{% if entity.extra %}
+  {{ entity_macros.extra_metadata(entity.extra) }}
 {% endif %}
+
 
 </div>
 <div class="five wide column">
