explode some extra metadata dicts

--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -22,8 +22,15 @@
 <table class="ui definition single line fixed compact small unstackable table">
 <tbody>
 {% for (key, value) in extra.items() %}
-  <tr><td class="three wide right aligned"><code>{{ key }}</code></td>
-      <td class="seven wide"><code>{{ value }}</code>
+  {% if key in ("ia", "crossref", "kbart") and value is mapping and value %}
+    {% for (inner_key, inner_value) in value.items() %}
+      <tr><td class="three wide right aligned"><code>{{ key }}.{{ inner_key }}</code></td>
+          <td class="seven wide"><code>{{ inner_value }}</code>
+    {% endfor %}
+  {% else %}
+    <tr><td class="three wide right aligned"><code>{{ key }}</code></td>
+        <td class="seven wide"><code>{{ value }}</code>
+  {% endif %}
 {% endfor %}
 </tbody>
 </table>
