--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -87,7 +87,7 @@
 <div class="title">
   <i class="dropdown icon"></i>All Contributors
 </div><div class="content">
-<table class="ui basic compact fixed table">
+<table class="ui basic compact table">
 <tbody>
 {% for contrib in release.contribs %}
   <tr><td class="collapsing">{% if contrib.index or contrib.index == 0 %} {{ contrib.index + 1 }}{% endif %}
