webface: microdata for searchbox

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -13,7 +13,7 @@
     /* bnewbold: fix light grey bars in header */
     .ui.inverted.menu .item:before { background: none; }
   </style>
-
+  {% block extra_head %}{% endblock %}
 </head>
 <body style="margin-bottom: 100px; height: auto;">
 
